# litedbmodel.ts

./: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  COMPARISON.md  Dockerfile.test  NATIVE_RELATION_PLAN.md  README.md  RELEASING.md  SECURITY.md  docker-compose.livedb.yml  docker-compose.test.yml  embedoc.config.yaml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  typedoc.json  vitest.config.ts
.github/workflows/: ci.yml  conformance.yml  crosslang-bench.yml  npm-audit-remediate.yml  publish-crates.yml  publish-pypi.yml  publish.yml  release.yml
.playwright-mcp/: page-2026-06-17T14-25-29-177Z.yml  page-2026-06-17T14-25-43-379Z.yml  page-2026-06-17T14-38-58-082Z.yml  page-2026-06-18T14-27-39-301Z.yml  page-2026-06-18T14-28-58-560Z.yml  page-2026-06-19T02-06-36-058Z.yml  page-2026-06-19T07-33-35-910Z.yml
benchmark/: BENCHMARK-DETAILS.md  CROSS-LANG.md  ORM-PILOT.md  bench-nested.ts  benchmark.ts  generate-chart.ts  package-lock.json  package.json  setup.ts  tsconfig.json
benchmark/crosslang/: .gitignore  HANDOFF-RUST-TO-MULTILANG.md  REBUILD.md  bench-structure-guard.ts  check-versions.ts  codegen-build.ts  collect.ts  contract.ts  coverage-roundtrip.ts  domain.ts  emit-setup.ts  gen-native.mts  gen-native.sh  gen-orm-plan.ts  generate.ts  go-companions.ts  harness.ts  metrics.ts  microbench.ts  native-codegen-purity.mjs  native-companion.ts  native-model.mts  ops.ts  oracle.ts  (+16 more)
benchmark/crosslang/adapters/rust/: Cargo.toml
benchmark/crosslang/adapters/rust-codegen/: Cargo.toml
benchmark/crosslang/adapters/rust-codegen/src/: main.rs
benchmark/crosslang/adapters/rust/src/: main.rs  orm.rs  seam.rs
benchmark/crosslang/adapters/v1rs/: Cargo.toml
benchmark/crosslang/adapters/v1rs/src/: main.rs
conformance/: README.md  gen-livedb.test.ts  gen-livedb.ts  gen-vectors.test.ts  gen-vectors.ts  harness.ts  livedb-run.ts  package.json  tsconfig.json  vectors-run.ts  vectors-runner.ts  vitest.config.ts  vitest.livedb.config.ts
docs/: BENCHMARK-NESTED.md  BENCHMARK.md  COMPARISON.md  README_REVIEW.md  api-guide.md  sql-tagged-template.md
embeds/: benchmark_table.ts  index.ts
eslint-plugin/: index.js
go/: README.md  go.mod  go.sum
php/: README.md  composer.json  lm_bench_setup.php  phpunit.xml
python/: README.md  lm_bench_setup.py  pyproject.toml
python/litedbmodel_runtime/: __init__.py  connection_routing.py  driver.py  errors.py  exec_context.py  grouping.py  leaves.py  livedb_runner.py  middleware.py  relation.py  render.py  runtime.py  static_bundle.py  tx_options.py  vectors_runner.py
python/orm_bench/: __init__.py  behaviors_generated.py  main.py
python/orm_bench_sdk/: main.py
python/tests/: test_conformance_corpus.py  test_connection_routing.py  test_connection_routing_livedb.py  test_consumes_bc_core.py  test_dialect.py  test_exec_context.py  test_grouping.py  test_hard_limit_guard.py  test_middleware.py  test_middleware_livedb.py  test_orm_bench_native.py  test_parallel_read.py  test_render.py  test_runtime.py  test_transaction_boundary.py  test_tx_boundary_livedb.py  test_tx_isolation.py  test_tx_options.py
rust/: Cargo.toml  README.md
rust/e1_native_proof/: Cargo.toml  compare-livedb.mjs  compare.mjs  compare_write.mjs  livedb-seed.mjs  run-proof-livedb.sh  run-proof.sh
rust/e1_native_proof/src/: companion_byids.rs  companion_bymaybe.rs  companion_capped.rs  companion_createmany.rs  companion_createuser.rs  companion_deleteuser.rs  companion_feed.rs  companion_findunique.rs  companion_recent.rs  companion_relbatch.rs  companion_relbatch_rel_posts.rs  companion_relsingle.rs  companion_relsingle_rel_comments.rs  companion_renameuser.rs  companion_tenantfeed.rs  companion_txdelete.rs  companion_txnestedcreate.rs  companion_txnestedupdate.rs  companion_txnestedupsert.rs  companion_txrollback.rs  companion_updatemany.rs  companion_upsert.rs  companion_upsertmany.rs  generated_byids.rs  generated_bymaybe.rs  generated_capped.rs  generated_createmany.rs  generated_createuser.rs  generated_deleteuser.rs  generated_feed.rs  generated_findunique.rs  generated_recent.rs  generated_relbatch.rs  generated_relsingle.rs  generated_relsingle_rel_comments.rs  generated_renameuser.rs  generated_tenantfeed.rs  generated_txdelete.rs  generated_txnestedcreate.rs  generated_txnestedupdate.rs  (+7 more)
rust/litedbmodel_interpreter/: Cargo.toml
rust/litedbmodel_interpreter/examples/: micro_perf.rs
rust/litedbmodel_interpreter/src/: lib.rs  node.rs  relation.rs  static_bundle.rs
rust/litedbmodel_interpreter/tests/: conformance.rs  fastpath_equivalence.rs  livedb_parallel.rs  middleware_relation_e2e.rs  parallel_read.rs  parallel_read_production.rs  tx_boundary.rs  tx_isolation.rs
rust/litedbmodel_oracle/: Cargo.toml
rust/litedbmodel_oracle/src/: main.rs
rust/litedbmodel_runtime/: Cargo.toml
rust/litedbmodel_runtime/examples/: micro_perf.rs
rust/litedbmodel_runtime/src/: codegen_exec.rs  connection_routing.rs  dialect.rs  driver.rs  errors.rs  exec_context.rs  grouping.rs  leaves.rs  lib.rs  livedb.rs  middleware.rs  node.rs  relation.rs  relation_interpreter.rs  render.rs  runtime.rs  sql_render.rs  static_bundle.rs  tx_options.rs  value.rs  value_codec.rs  wire.rs
rust/litedbmodel_runtime/tests/: conformance.rs  connection_routing.rs  fastpath_equivalence.rs  livedb_middleware.rs  livedb_parallel.rs  middleware_relation_e2e.rs  parallel_read.rs  parallel_read_production.rs  tx_boundary.rs  tx_isolation.rs
rust/livedb_runner/: Cargo.toml
rust/livedb_runner/src/: main.rs
rust/orm_bench/: Cargo.toml  run-pilot.sh
rust/orm_bench/src/: main.rs
rust/orm_bench_sdk/: Cargo.toml  run-sdk.sh
rust/orm_bench_sdk/src/: generated_setup.rs  main.rs
rust/vectors_runner/: Cargo.toml
rust/vectors_runner/src/: main.rs
scripts/: build-scp.mjs  check-no-local-deps.mjs  structure-guard.mjs  sync-versions.mjs  vendor-behavior-contracts-php.mjs
src/: Column.ts  DBConditions.ts  DBHandler.ts  DBModel.ts  DBValues.ts  LazyRelation.ts  Middleware.ts  SqlFragment.ts  TypeCast.ts  connection-errors.ts  decorators.ts  index.ts  types.ts
(+444 files in other folders)
