# Native-codegen REFERENCE CELL (epic #123 / #124) — the litedbmodel-consumer that runs the generated
# native modules end to end. It is a litedbmodel-CONSUMER: it CALLS the generated code (bc's native
# module + litedbmodel's co-located generated adapter) and supplies NO `node_*` handler itself. Every DB access
# goes through litedbmodel_runtime's Driver (NO `rusqlite` here — the old hand-written `seam.rs` that
# re-implemented the runtime over raw rusqlite is retired).
#
# A STANDALONE crate (its own `[workspace]`, deliberately NOT a member of the rust/ workspace) so it
# never perturbs the conformance bar's build/lock. Its ONLY dependency is `litedbmodel_runtime` (which
# brings the Driver, the Wire adapter, and — transitively — behavior-contracts + the SQLite driver).
[workspace]

[package]
name = "e1_native_proof"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
litedbmodel_runtime = { path = "../litedbmodel_runtime", default-features = false, features = ["native"] }
# Pin the transitive behavior-contracts to the EXACT version the rust/ workspace lock uses (0.8.0) —
# litedbmodel_runtime is written against that rust-crate API. Without this exact pin, this standalone
# crate's fresh lock would resolve the highest compatible 0.8.x (0.8.10), whose changed `ExecOutcome`
# arity does not compile the runtime. `default-features = false` mirrors the runtime (drops the `ir`
# feature, so no serde_json leaks in). Not used directly here — a version-alignment pin only.
behavior-contracts = { version = "=0.8.0", default-features = false }

# `livedb` (opt-in): route the SAME generated module + runtime against docker Postgres / MySQL via
# litedbmodel_runtime's live Driver (commit 2 / commit 3 of #124). The default (SQLite) build needs
# neither the postgres nor mysql crate.
[features]
default = []
livedb = ["litedbmodel_runtime/livedb"]
