[package]
name = "litedbmodel_interpreter"
version = "2.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
litedbmodel_runtime = { path = "../litedbmodel_runtime" }
behavior-contracts = { workspace = true, default-features = false }

[features]
default = []
livedb = ["litedbmodel_runtime/livedb"]
