[package]
name = "litedbmodel_oracle"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "litedbmodel_oracle"
path = "src/main.rs"

[dependencies]
litedbmodel_runtime = { path = "../litedbmodel_runtime" }
litedbmodel_interpreter = { path = "../litedbmodel_interpreter" }

[features]
default = []
livedb = ["litedbmodel_runtime/livedb", "litedbmodel_interpreter/livedb"]
