[package]
name = "litedbmodel_runtime"
version = "2.0.2"
edition.workspace = true
license.workspace = true
description = "Thin multi-language runtime for litedbmodel v2 SCP §8 bundles (Rust port). Interprets the published SqlBundle and executes it against a SQL driver — semantics-identical to the TS reference. Delegates Expression-IR evaluation to the behavior-contracts crate."
# Registry metadata (mirrors graphddb_runtime). Repo renamed to foo-ogawa/litedbmodel (2026-07-10);
# package.json, go/go.mod, and this crate all agree on the github.com/foo-ogawa/litedbmodel path.
repository = "https://github.com/foo-ogawa/litedbmodel"
homepage = "https://github.com/foo-ogawa/litedbmodel"
readme = "../README.md"
keywords = ["orm", "sql", "ir", "runtime", "conformance"]
categories = ["database", "api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
behavior-contracts = { workspace = true }
# In-process SQLite driver for the conformance bar (real execution — the sanctioned in-proc
# substitute for docker; #34 AC). `bundled` builds the SQLite amalgamation so no system libsqlite
# is required. This is the runnable seam; PG/MySQL drivers plug into the same `Driver` trait later.
rusqlite = { workspace = true }
# WS7g (#36) live-DB drivers — ASYNC + connection-pool clients that plug into the SAME `Driver`
# trait (#40: restore the old `litedbmodel.rs` async+pool execution model; the v2 migration had
# regressed to the synchronous `postgres`/`mysql` crates + single connection). Postgres rides
# `tokio-postgres` + `deadpool-postgres` (the PG pool), MySQL + SQLite ride `sqlx` on the tokio
# runtime — matching the old `.rs` `Pool::{Postgres(deadpool_postgres::Pool), Mysql(MySqlPool),
# Sqlite(SqlitePool)}`. A shared tokio runtime blocks the sync `Driver` seam on each pooled call, so
# concurrent `all()` calls from different threads each check out a DISTINCT pooled connection → real
# parallel DB I/O. Feature-gated so the default conformance build (SQLite bar via rusqlite) pulls
# none of these; the livedb_runner binary enables `--features livedb`.
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4"] }
# NUMERIC / DECIMAL array-element binding for the no-cast `= ANY($1)` IN-list (#46 item 4): PG
# infers `numeric[]` from the column and expects each element in NUMERIC binary — a bare f64 into a
# numeric slot fails ("db error"). `rust_decimal` with the tokio-postgres integration encodes the
# exact NUMERIC binary; `chrono` (already via tokio-postgres with-chrono-0_4) covers timestamp[].
rust_decimal = { version = "1", optional = true, features = ["db-tokio-postgres"] }
chrono = { version = "0.4", optional = true, default-features = false }
deadpool-postgres = { version = "0.14", optional = true, features = ["rt_tokio_1"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "mysql", "sqlite"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "sync", "macros"] }
futures-util = { version = "0.3", optional = true }

[features]
livedb = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:sqlx", "dep:tokio", "dep:futures-util", "dep:rust_decimal", "dep:chrono"]
