[package]
name = "litedbmodel_runtime"
version = "2.0.2"
edition.workspace = true
license.workspace = true
description = "Thin multi-language runtime for litedbmodel v2 SCP §8 bundles (Rust port). Interprets the published SqlBundle and executes it against a SQL driver — semantics-identical to the TS reference. Delegates Expression-IR evaluation to the behavior-contracts crate."
# Registry metadata (mirrors graphddb_runtime). Repo renamed to foo-ogawa/litedbmodel (2026-07-10);
# package.json, go/go.mod, and this crate all agree on the github.com/foo-ogawa/litedbmodel path.
repository = "https://github.com/foo-ogawa/litedbmodel"
homepage = "https://github.com/foo-ogawa/litedbmodel"
readme = "../README.md"
keywords = ["orm", "sql", "ir", "runtime", "conformance"]
categories = ["database", "api-bindings"]

[dependencies]
# NATIVE-ONLY (#8): the runtime carries NO serde_json / serde. The published bundle is pure JSON, but
# the runtime parses it through its OWN native JSON parser (`node::Node::parse`) and evaluates the
# deferred param slots through its OWN native closed-set evaluator (`node::eval_expr`) — bc's
# serde_json-based `ir` feature (`evaluate_expression`/`run_behavior`) is NOT used. `cargo tree -i
# serde_json` from this crate is EMPTY (default-features=false drops bc's serde_json-pulling `ir`).
behavior-contracts = { workspace = true, default-features = false }
# In-process SQLite driver for the conformance bar (real execution — the sanctioned in-proc
# substitute for docker; #34 AC). `bundled` builds the SQLite amalgamation so no system libsqlite
# is required. This is the runnable seam; PG/MySQL drivers plug into the same `Driver` trait later.
rusqlite = { workspace = true }
# WS7g (#36) live-DB drivers — ASYNC + connection-pool clients that plug into the SAME `Driver`
# trait (#40: restore the old `litedbmodel.rs` async+pool execution model; the v2 migration had
# regressed to the synchronous `postgres`/`mysql` crates + single connection). Postgres rides
# `tokio-postgres` + `deadpool-postgres` (the PG pool), MySQL + SQLite ride `sqlx` on the tokio
# runtime — matching the old `.rs` `Pool::{Postgres(deadpool_postgres::Pool), Mysql(MySqlPool),
# Sqlite(SqlitePool)}`. A shared tokio runtime blocks the sync `Driver` seam on each pooled call, so
# concurrent `all()` calls from different threads each check out a DISTINCT pooled connection → real
# parallel DB I/O. Feature-gated so the default conformance build (SQLite bar via rusqlite) pulls
# none of these; the livedb_runner binary enables `--features livedb`.
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4"] }
# NUMERIC / DECIMAL array-element binding for the no-cast `= ANY($1)` IN-list (#46 item 4): PG
# infers `numeric[]` from the column and expects each element in NUMERIC binary — a bare f64 into a
# numeric slot fails ("db error"). `rust_decimal` with the tokio-postgres integration encodes the
# exact NUMERIC binary; `chrono` (already via tokio-postgres with-chrono-0_4) covers timestamp[].
rust_decimal = { version = "1", optional = true, features = ["db-tokio-postgres"] }
chrono = { version = "0.4", optional = true, default-features = false }
deadpool-postgres = { version = "0.14", optional = true, features = ["rt_tokio_1"] }
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio", "mysql", "sqlite"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "sync", "macros"] }
futures-util = { version = "0.3", optional = true }

[features]
livedb = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:sqlx", "dep:tokio", "dep:futures-util", "dep:rust_decimal", "dep:chrono"]

# TEST-ONLY: the integration tests build their bundle/graph fixtures with the `json!` macro for
# readability, then convert to the runtime's native `Node` at the boundary (a local `to_node`
# helper). This is a DEV dependency — it is NOT part of the shipped runtime lib's dependency tree
# (`cargo tree -i serde_json --edges normal` from the crate is EMPTY), so it cannot reintroduce
# serde_json into the runtime's EXECUTION path. The runtime SOURCE (`src/`) carries no serde_json.
[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
