[package]
name = "vectors_runner"
version = "2.0.1"
edition.workspace = true
license.workspace = true
description = "Runs the litedbmodel SCP conformance VECTOR corpus through the DEPENDED litedbmodel_runtime crate and prints a JSON summary (WS7d, #30)."
publish = false

[[bin]]
name = "vectors_runner"
path = "src/main.rs"

[dependencies]
litedbmodel_runtime = { path = "../litedbmodel_runtime" }
serde_json = { workspace = true }
