# The DEDICATED Rust codegen-cell binary (epic #44 perf integration; owner order).
#
# The codegen execution path must carry NO IR data and parse NO JSON — so the codegen cell is a
# SEPARATE crate whose manifest has NO serde_json (and no litedbmodel_runtime, whose bundle/IR
# surface is JSON-decoded data). It consumes:
#   - the bc-GENERATED straight-line modules  (generated/codegen/rust/<case>.rs)
#   - the GENERATED native companion          (generated/codegen/rust/companion.rs — pre-decoded
#     statement/tx/relation plans + bench inputs + schema/seed, closed-set, fail-closed)
#   - rusqlite (the in-proc SQL driver seam)
#
# bc 0.4.0 isolates serde_json behind its `ir` feature; the codegen surface (primitives/rawabi/
# value/plan/template/canonical + BehaviorError/ComponentExec) is feature-free. Consuming it with
# `default-features = false` keeps serde_json OUT of this binary's whole dependency tree
# (verified: `cargo tree -i serde_json` reports no match). THIS crate's own sources use no
# serde_json either (grep-gated in benchmark/crosslang/selfcheck.ts).
[package]
name = "lm_codegen"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "lm_codegen"
path = "src/main.rs"

[dependencies]
behavior-contracts = { version = "0.7.2", default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
