[package]
name = "lm_orm"
version = "0.0.0"
edition = "2021"
publish = false

# The ORM-plan executor (consumes generated/orm-plan.json; the shipped thin-runtime + live
# driver seam). It self-measures and writes a FLAT CSV (no wire protocol, no serde_json).
[[bin]]
name = "lm_orm"
path = "src/orm.rs"

[dependencies]
# `livedb` pulls in the runtime's ASYNC + connection-pool Postgres + MySQL drivers
# (tokio-postgres + deadpool-postgres / sqlx on the tokio runtime) — the SAME sync-facing
# `Driver` seam `livedb_runner` uses.
litedbmodel_runtime = { path = "../../../../rust/litedbmodel_runtime", features = ["livedb"] }
behavior-contracts = "0.8.0"
# RAW-DRIVER BASELINE (benchmark-only, sqlite): a BARE `rusqlite::Connection` used to run the
# IDENTICAL final SQL + params the runtime issues, WITHOUT going through the shipped `Driver` seam /
# Value codec — so `runtime÷baseline` measures litedbmodel_runtime's over-driver overhead. Pinned to
# the SAME version the runtime's `SqliteDriver` uses internally (rust/Cargo.toml workspace dep) so the
# `rusqlite::types::Value` family and the bundled amalgamation match byte-for-byte.
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
