# Main-bench RUST cell — the CLI-generated typed-native modules + the generic exec seam. STANDALONE crate
# (own [workspace]). The generated modules are runtime-free (no behavior_contracts); the hand-written
# seam/SDK use ONLY the DB driver crate for the built dialect:
#   sqlite  (default) → rusqlite            : cargo build --release
#   postgres          → postgres + chrono   : cargo build --release --no-default-features --features postgres,count-queries
# One dialect per binary (feature-selected): the generated module tree (generated/<dialect>/) + the
# driver backend are chosen by the feature, so the SAME handlers compile against either DB.
[workspace]

[package]
name = "orm_bench_rust"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "orm_bench_rust"
path = "src/main.rs"

[features]
default = ["sqlite", "count-queries"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:postgres", "dep:chrono", "dep:bytes"]
# The batched-relation PROOF legs count seam queries; the LATENCY bench builds --no-default-features so
# the counting atomic never runs in the timed hot path.
count-queries = []

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
postgres = { version = "0.19", features = ["with-chrono-0_4"], optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
bytes = { version = "1", optional = true }
